Use the VVV_SITE_NAME variable to make site creation a bit more dynamic

--- a/vvv-nginx.conf
+++ b/vvv-nginx.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   listen 443 ssl;
-  server_name vvvtest.dev;
+  server_name {vvv_site_name};
   root {vvv_path_to_site}/public_html;
 
   error_log {vvv_path_to_site}/log/error.log;
