--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -1,7 +1,10 @@
 server {
   listen 80;
-  listen 443 ssl;
+  listen   [::]:80;
+  # listen 443 default_server ssl;
+
   server_name {vvv_site_name};
+  
   root {vvv_path_to_site}/public_html;
 
   error_log {vvv_path_to_site}/log/error.log;
@@ -10,4 +13,12 @@ server {
   set $upstream {upstream};
 
   include /etc/nginx/nginx-wp-common.conf;
+
+  # ssl    on;
+  # ssl_certificate    {vvv_path_to_folder}/ssl/chauvenet.dev.crt;
+  # ssl_certificate_key    {vvv_path_to_folder}/ssl/chauvenet.dev.key;
+
+  # if ($scheme = http) {
+  #   return 301 https://$server_name$request_uri;
+  # }
 }
