--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   listen   [::]:80;
-  # listen 443 ssl;
+  listen 443 ssl;
 
   server_name {vvv_site_name};
   
@@ -14,11 +14,11 @@ server {
 
   include /etc/nginx/nginx-wp-common.conf;
 
-  # ssl    on;
-  # ssl_certificate    {vvv_path_to_folder}/ssl/{site_name}.dev.crt;
-  # ssl_certificate_key    {vvv_path_to_folder}/ssl/{site_name}.dev.key;
+  ssl    on;
+  ssl_certificate    {vvv_path_to_folder}/ssl/{site_name}.dev.crt;
+  ssl_certificate_key    {vvv_path_to_folder}/ssl/{site_name}.dev.key;
 
-  # if ($scheme = http) {
-  #   return 301 https://$server_name$request_uri;
-  # }
+  if ($scheme = http) {
+    return 301 https://$server_name$request_uri;
+  }
 }
