Fix for Chrome 58+ [missing_subjectAltName] with openssl when using self signed certificates, thanks: https://alexanderzeitler.com/articles/Fixing-Chrome-missing_subjectAltName-selfsigned-cert-openssl/

--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -15,8 +15,8 @@ server {
   include /etc/nginx/nginx-wp-common.conf;
 
   ssl    on;
-  ssl_certificate    {vvv_path_to_folder}/ssl/{site_name}.dev.crt;
-  ssl_certificate_key    {vvv_path_to_folder}/ssl/{site_name}.dev.key;
+  ssl_certificate    {vvv_path_to_folder}/ssl/{vvv_site_name}.crt;
+  ssl_certificate_key    {vvv_path_to_folder}/ssl/{vvv_site_name}.key;
 
   if ($scheme = http) {
     return 301 https://$server_name$request_uri;
