Update NGINX config template to use new VVV provision-site variable that I'm proposing

--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -3,7 +3,7 @@ server {
   listen   [::]:80;
   listen 443 ssl;
 
-  server_name {vvv_site_name};
+  server_name {vvv_hosts};
   
   root {vvv_path_to_site}/public_html;
 
