--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -15,8 +15,8 @@ server {
   include /etc/nginx/nginx-wp-common.conf;
 
   ssl    on;
-  ssl_certificate    {vvv_path_to_site}/ssl/{vvv_site_name}.crt;
-  ssl_certificate_key    {vvv_path_to_site}/ssl/{vvv_site_name}.key;
+  ssl_certificate    {vvv_path_to_site}/ssl/{vvv_hosts}.crt;
+  ssl_certificate_key    {vvv_path_to_site}/ssl/{vvv_hosts}.key;
 
   if ($scheme = http) {
     return 301 https://$server_name$request_uri;
