Fix for 'nginx: [warn] the "ssl" directive is deprecated, use the "listen ... ssl" directive instead'

--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -14,7 +14,7 @@ server {
 
   include /etc/nginx/nginx-wp-common.conf;
 
-  ssl    on;
+  #ssl    on;
   ssl_certificate    {vvv_path_to_site}/ssl/{vvv_hosts}.crt;
   ssl_certificate_key    {vvv_path_to_site}/ssl/{vvv_hosts}.key;
 
