--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -1,24 +1,16 @@
 server {
-  listen 80;
-  listen   [::]:80;
-  listen 443 ssl;
+    listen       80;
+    listen       443 ssl;
+    server_name  {{DOMAINS_HERE}};
+    root         {vvv_path_to_site}/public_html;
 
-  server_name {vvv_hosts};
-  
-  root {vvv_path_to_site}/public_html;
+    error_log    {vvv_path_to_site}/log/error.log;
+    access_log   {vvv_path_to_site}/log/access.log;
 
-  error_log {vvv_path_to_site}/log/error.log;
-  access_log {vvv_path_to_site}/log/access.log;
+    set          $upstream {upstream};
 
-  set $upstream {upstream};
+    {{TLS_CERT}}
+    {{TLS_KEY}}
 
-  include /etc/nginx/nginx-wp-common.conf;
-
-  #ssl    on;
-  ssl_certificate    {vvv_path_to_site}/ssl/{vvv_hosts}.crt;
-  ssl_certificate_key    {vvv_path_to_site}/ssl/{vvv_hosts}.key;
-
-  if ($scheme = http) {
-    return 301 https://$server_name$request_uri;
-  }
+    include      /etc/nginx/nginx-wp-common.conf;
 }
